# kb_articles_rag_prd

./: .gitignore  pyproject.toml
src/kb_articles_rag_prd/: __init__.py  test.py
src/kb_articles_rag_prd/common/: config.py
src/kb_articles_rag_prd/core/: common.py  generator.py  indexer.py  readers.py  test_recordmanager.py  utils.py
src/kb_articles_rag_prd/data/: article_004_github_actions.txt
src/kb_articles_rag_prd/provider/: generator.py  indexer.py
src/kb_articles_rag_prd/ui/: main.py
